updated with get and post not done

--- a/fetchNStore/fetchNStore.csproj
+++ b/fetchNStore/fetchNStore.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="DAL\ResponseContext.cs" />
     <Compile Include="DAL\ResponseRepository.cs" />
     <Compile Include="Global.asax.cs">
